# Cursor-Backtest-System

./: .gitignore  README.md  __init__.py  auto_optimizer.py  auto_run.py  backtest_engine.py  data_fetcher.py  main.py  optimizer.py  performance.py  pyproject.toml  requirements.txt  strategy.py
