[project]
name = "backtesting"
version = "0.1.0"
description = "This is the project for backtesting codeveloped with cursor."
authors = [
    {name = "JunJie-Chang",email = "justinooi0416@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "yfinance (>=0.2.28)",
    "matplotlib (>=3.7.0)",
    "seaborn (>=0.12.0)",
    "scipy (>=1.10.0)",
    "ta-lib (>=0.4.28)",
    "requests (>=2.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
